--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "SeungHyunLee",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8"
   },
   "devDependencies": {
